<?xml version="1.0" encoding="utf-8"?>

<!--******************************************************************************-->
<!-- GYMKETSII App                                                                -->
<!-- @file strings.xml                                                            -->
<!--******************************************************************************-->
<!-- GymkETSII dev team:                                                          -->
<!-- @author 19235 - Javier Martínez Ciria <javier.martinez.ciria@alumnos.upm.es> -->
<!-- @author 11210 - Javier Jiménez Fernández <j.jfernandez@alumnos.upm.es>       -->
<!--******************************************************************************-->

<resources>
    <string name="app_name">GymkETSII</string>
    <!-- Activity labels -->
    <string name="welcome_label">GymkETSII</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="new_game_menu_label">New Game Menu</string>
    <string name="load_game_menu_label">Load Game Menu</string>
    <string name="instructions_menu_label">Instructions Menu</string>
    <string name="level1_label">Level 1</string>
    <string name="level2_label">Level 2</string>
    <string name="level3_label">Level 3</string>
    <string name="win_screen_label">Win Screen</string>
    <!-- Main Menu -->
    <string name="main_menu">MAIN MENU</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="instructions">Instructions</string>
    <!-- New Game Menu -->
    <string name="new_game_menu">NEW GAME MENU</string>
    <string name="insert_name">Insert Name:</string>
    <string name="name_hint">Name</string>
    <string name="start_game">Start Game</string>
    <!-- Load Game Menu -->
    <string name="load_game_menu">LOAD GAME MENU</string>
    <string name="player_list_title">Player List</string>
    <string name="choose_player_text">Write down the name of a player in\nthe list to load/delete that game:</string>
    <string name="choose_player_hint">Player Name</string>
    <string name="load_text">Load</string>
    <string name="delete_text">Delete</string>
    <!-- Instructions Menu -->
    <string name="instructions_menu">INSTRUCTIONS MENU</string>
    <string name="instructions_text">This is a Cluedo style game set in the ETSII.\nSearch for the correct answers and solve the puzzles\nto complete the levels. Play along with your friends\nto discover the secrets of this old Engineering School...</string>
    <!-- Level 1 -->
    <string name="level1">LEVEL 1</string>
    <string name="text_level1">As soon as you arrive at the ETSII\, you are amazed to see the building\, the dome and the machine at the entrance… But what is most striking is hearing so many people talk about the \"special sandwich\"\. I\'m sure you\'ve already been able to eat a few but… What is its current price\?</string>
    <string name="send_button">Send</string>
    <string name="error_text">Incorrect. Try again.</string>
    <string name="continue_button_level1">Next!</string>
    <string name="correct_text_level1">THAT\'S CORRECT!!</string>
    <!-- Level 2 -->
    <string name="level2">LEVEL 2</string>
    <string name="text_level2">Near the smelter there is a very old site, some tunnels that connect to secret places... If you are able to simulate its environment, you will be able to pass this level. (Or you can also go there to investigate...)</string>
    <!-- Level 3 -->
    <string name="level3">LEVEL 3</string>
    <string name="correct_text_level3">And... That\'s All Folks</string>
    <string name="continue_button_level3">Main Menu</string>
    <string name="text_level3">If you know what it is... You just need to try and you will pass the level</string>
</resources>